# allegro

./: .flake8  CODE_OF_CONDUCT.md  README.md  pyproject.toml  shell.nix
.github/workflows/: main.yml
allegro/: cache.py  cli.py  constraints.py  iterables.py  midi.py  numbers.py  search.py  serial.py  transform.py
examples/: katabasis.py  search-engine.py  trichords_and_hexachords.py
tests/: test_allegro.py  test_cache.py  test_constraints.py  test_iterables.py  test_midi.py  test_numbers.py  test_transform.py
