[tool.poetry]
authors = ["Alex Hendrie Bielen <alexhendriebielen@gmail.com>"]
description = "Tools for alogorithmic composition."
license = "MIT"
name = "allegro"
version = "0.1.0"

[tool.poetry.dependencies]
ortools = "9.1.9490"
python = "^3.9"
python-rtmidi = "^1.4.9"
click = "^8.0.3"
more-itertools = "^8.11.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
rope = "^0.22.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
