[tool.poetry]
authors = ["Alex Hendrie Bielen <alexhendriebielen@gmail.com>"]
description = ""
name = "allegro"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
music21 = "^9.1.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
